network_policy/block_particular_ip.yaml
# how to block egress to IP in or out k8s cluster
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-except-one
spec:
  podSelector:
    matchLabels:
      run: swiss
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0  # allow egress to all 
            except: 
              - 172.16.133.198/32 # dont allow to this IP (inside of k8s cluster)
              - 10.101.101.7/32  # dont allow to this IP (outside of k8s cluster)
