network_policy/ingress_to_service_from_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress_to_svc
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: app
  policyTypes:
  - Ingress
  ingress:
    - ports:
      - port: 80
        protocol: TCP
